--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<article>
 	
 		<h1>Contentshifter</h1>
-		<p class="intro">Shifting content around based on breakpoints specified as part of the <a href="">onmediaquery</a> plugin.</p>
+		<p class="intro">Shifting content around, in this instance triggered by breakpoint changes using the <a href="">onmediaquery</a> plugin.</p>
 	
 		<section class="container main">
 			<h2>All the content goes in here by default.</h2>
