--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
 				<p class="update">Current: <span></span></p>
 			</section>
 	
-			<section class="block shift-content" data-alt-location="#mobile" data-breakpoint="mobile" data-shift='{"mobile": "#mobile"}'>
+			<section class="block shift-content" data-shift='{"mobile": "#mobile"}'>
 				<p>This block needs to move into the <strong>mobile</strong> block on small screens.</p>
 				<p class="update">Current: <span></span></p>
 			</section>
 	
-			<section class="block shift-content" data-alt-location="#tablet" data-breakpoint="tablet" data-shift='{"tablet": "#tablet"}'>
+			<section class="block shift-content" data-shift='{"tablet": "#tablet"}'>
 				<p>This block needs to move into the <strong>tablet</strong> block on small screens.</p>
 				<p class="update">Current: <span></span></p>
 			</section>
