--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		body { font-family: sans-serif; }
 		body:after { display: none; }
 
-		@media screen and (max-width: 450px) {
+		@media screen and (max-width: 767px) {
 			html { font-family: "mobile"; }
 			body:after { content: "mobile"; }
 		}
@@ -32,6 +32,11 @@
 		@media screen and (min-width: 960px) {
 			html { font-family: "desktop"; }
 			body:after { content: "desktop"; }
+		}
+
+		@media screen and (min-width: 1200px) {
+			html { font-family: "widescreen"; }
+			body:after { content: "widescreen"; }
 		}
 	</style>
 
@@ -50,27 +55,28 @@
 				match: function() {
 					shifter.contentshifter("shift", "mobile");
 				},
-				unmatch: function() {
-					// shifter.contentshifter("shift", "mobile");
-				}
+				unmatch: function() {}
 			},
 			{
 				context: 'tablet',
 				match: function() {
 					shifter.contentshifter("shift", "tablet");
 				},
-				unmatch: function() {
-					// shifter.contentshifter("shift", "tablet");
-				}
+				unmatch: function() {}
 		    },
 			{
 				context: 'desktop',
 				match: function() {
 					shifter.contentshifter("shift", "desktop");
 				},
-				unmatch: function() {
-				
-				}
+				unmatch: function() {}
+			},
+			{
+				context: 'widescreen',
+				match: function() {
+					shifter.contentshifter("shift", "widescreen");
+				},
+				unmatch: function() {}
 			}];
 
 			MQ.init(queries);
@@ -83,39 +89,46 @@
 	<article>
 	
 		<h1>Contentshifter</h1>
-		<p class="intro">Shifting content around, in this instance triggered by breakpoint changes using the <a href="https://github.com/JoshBarr/on-media-query">onmediaquery</a> plugin.</p>
+		<section class="intro">
+			<p>A working example of the <a href="https://github.com/sneaknz/contentshifter">Contentshifter plugin</a>, which shifts content into alternate locations when called.</p>
+			<p>In this instance the calls are triggered by breakpoint changes using the <a href="https://github.com/JoshBarr/on-media-query">onmediaquery</a> plugin.</p>
+		</section>
 	
 		<section class="container main">
-			<h2>All the content goes in here by default.</h2>
+			<h2>Desktop</h2>
 	
 			<section class="block">
-				<p>This block of content shouldn't move anywhere.</p>
-				<p class="update">Current: <span></span></p>
+				<p>Do not shift</p>
 			</section>
 	
-			<section class="block shift-content" data-shift='{"mobile": "#mobile"}'>
-				<p>This block needs to move into the <strong>mobile</strong> block on small screens.</p>
-				<p class="update">Current: <span></span></p>
+			<section class="block" data-shift='{"mobile": "#mobile"}'>
+				<p>Shift to <strong>Mobile</strong></p>
 			</section>
 	
-			<section class="block shift-content" data-shift='{"tablet": "#tablet"}'>
-				<p>This block needs to move into the <strong>tablet</strong> block on small screens.</p>
-				<p class="update">Current: <span></span></p>
+			<section class="block" data-shift='{"tablet": "#tablet"}'>
+				<p>Shift to <strong>Tablet</strong></p>
 			</section>
 	
-			<section class="block shift-content" data-shift='{"mobile": "#mobile", "tablet": "#tablet"}'>
-				<p>This block should move into both the <strong>tablet</strong> and <strong>mobile</strong> blocks on small screens.</p>
-				<p class="update">Current: <span></span></p>
+			<section class="block" data-shift='{"widescreen": "#widescreen"}'>
+				<p>Shift to <strong>Widescreen</strong></p>
+			</section>
+	
+			<section class="block" data-shift='{"mobile": "#mobile", "tablet": "#tablet"}'>
+				<p>Shift to <strong>mobile</strong> and <strong>Tablet</strong></p>
 			</section>
 
 		</section>
 
+		<div id="widescreen" class="container">
+			<h2>Widescreen</h2>
+		</div>
+
 		<div id="mobile" class="container">
-			<h2>Mobile stuff will go in here.</h2>
+			<h2>Mobile</h2>
 		</div>
 
 		<div id="tablet" class="container">
-			<h2>Tablet stuff will go in here.</h2>
+			<h2>Tablet</h2>
 		</div>
 		
 	</article>
